Update of jextract files to JDK19