@@ -5,8 +5,8 @@ package org.libheif.linuxosx;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$14 {
 
     static final FunctionDescriptor heif_image_has_channel$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
@@ -15,7 +15,7 @@ class constants$14 {
     );
     static final MethodHandle heif_image_has_channel$MH = RuntimeHelper.downcallHandle(
         "heif_image_has_channel",
-        constants$14.heif_image_has_channel$FUNC, false
+        constants$14.heif_image_has_channel$FUNC
     );
     static final FunctionDescriptor heif_image_get_plane_readonly$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -24,7 +24,7 @@ class constants$14 {
     );
     static final MethodHandle heif_image_get_plane_readonly$MH = RuntimeHelper.downcallHandle(
         "heif_image_get_plane_readonly",
-        constants$14.heif_image_get_plane_readonly$FUNC, false
+        constants$14.heif_image_get_plane_readonly$FUNC
     );
     static final FunctionDescriptor heif_image_get_plane$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -33,7 +33,7 @@ class constants$14 {
     );
     static final MethodHandle heif_image_get_plane$MH = RuntimeHelper.downcallHandle(
         "heif_image_get_plane",
-        constants$14.heif_image_get_plane$FUNC, false
+        constants$14.heif_image_get_plane$FUNC
     );
     static final FunctionDescriptor heif_image_scale_image$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_INT$LAYOUT.withName("code"),
@@ -48,7 +48,7 @@ class constants$14 {
     );
     static final MethodHandle heif_image_scale_image$MH = RuntimeHelper.downcallHandle(
         "heif_image_scale_image",
-        constants$14.heif_image_scale_image$FUNC, false
+        constants$14.heif_image_scale_image$FUNC
     );
     static final FunctionDescriptor heif_image_set_raw_color_profile$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_INT$LAYOUT.withName("code"),
@@ -62,7 +62,7 @@ class constants$14 {
     );
     static final MethodHandle heif_image_set_raw_color_profile$MH = RuntimeHelper.downcallHandle(
         "heif_image_set_raw_color_profile",
-        constants$14.heif_image_set_raw_color_profile$FUNC, false
+        constants$14.heif_image_set_raw_color_profile$FUNC
     );
     static final FunctionDescriptor heif_image_set_nclx_color_profile$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_INT$LAYOUT.withName("code"),
@@ -74,7 +74,7 @@ class constants$14 {
     );
     static final MethodHandle heif_image_set_nclx_color_profile$MH = RuntimeHelper.downcallHandle(
         "heif_image_set_nclx_color_profile",
-        constants$14.heif_image_set_nclx_color_profile$FUNC, false
+        constants$14.heif_image_set_nclx_color_profile$FUNC
     );
 }
 
