@@ -5,8 +5,8 @@ package org.libheif.linuxosx;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$18 {
 
     static final FunctionDescriptor heif_encoder_list_parameters$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
@@ -14,21 +14,21 @@ class constants$18 {
     );
     static final MethodHandle heif_encoder_list_parameters$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_list_parameters",
-        constants$18.heif_encoder_list_parameters$FUNC, false
+        constants$18.heif_encoder_list_parameters$FUNC
     );
     static final FunctionDescriptor heif_encoder_parameter_get_name$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle heif_encoder_parameter_get_name$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_parameter_get_name",
-        constants$18.heif_encoder_parameter_get_name$FUNC, false
+        constants$18.heif_encoder_parameter_get_name$FUNC
     );
     static final FunctionDescriptor heif_encoder_parameter_get_type$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle heif_encoder_parameter_get_type$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_parameter_get_type",
-        constants$18.heif_encoder_parameter_get_type$FUNC, false
+        constants$18.heif_encoder_parameter_get_type$FUNC
     );
     static final FunctionDescriptor heif_encoder_parameter_get_valid_integer_range$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_INT$LAYOUT.withName("code"),
@@ -42,7 +42,7 @@ class constants$18 {
     );
     static final MethodHandle heif_encoder_parameter_get_valid_integer_range$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_parameter_get_valid_integer_range",
-        constants$18.heif_encoder_parameter_get_valid_integer_range$FUNC, false
+        constants$18.heif_encoder_parameter_get_valid_integer_range$FUNC
     );
     static final FunctionDescriptor heif_encoder_parameter_get_valid_integer_values$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_INT$LAYOUT.withName("code"),
@@ -59,7 +59,7 @@ class constants$18 {
     );
     static final MethodHandle heif_encoder_parameter_get_valid_integer_values$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_parameter_get_valid_integer_values",
-        constants$18.heif_encoder_parameter_get_valid_integer_values$FUNC, false
+        constants$18.heif_encoder_parameter_get_valid_integer_values$FUNC
     );
     static final FunctionDescriptor heif_encoder_parameter_get_valid_string_values$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_INT$LAYOUT.withName("code"),
@@ -71,7 +71,7 @@ class constants$18 {
     );
     static final MethodHandle heif_encoder_parameter_get_valid_string_values$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_parameter_get_valid_string_values",
-        constants$18.heif_encoder_parameter_get_valid_string_values$FUNC, false
+        constants$18.heif_encoder_parameter_get_valid_string_values$FUNC
     );
 }
 
