@@ -5,8 +5,8 @@ package org.libheif.linuxosx;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$7 {
 
     static final FunctionDescriptor heif_image_handle_get_number_of_depth_images$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
@@ -14,7 +14,7 @@ class constants$7 {
     );
     static final MethodHandle heif_image_handle_get_number_of_depth_images$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_get_number_of_depth_images",
-        constants$7.heif_image_handle_get_number_of_depth_images$FUNC, false
+        constants$7.heif_image_handle_get_number_of_depth_images$FUNC
     );
     static final FunctionDescriptor heif_image_handle_get_list_of_depth_image_IDs$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -23,7 +23,7 @@ class constants$7 {
     );
     static final MethodHandle heif_image_handle_get_list_of_depth_image_IDs$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_get_list_of_depth_image_IDs",
-        constants$7.heif_image_handle_get_list_of_depth_image_IDs$FUNC, false
+        constants$7.heif_image_handle_get_list_of_depth_image_IDs$FUNC
     );
     static final FunctionDescriptor heif_image_handle_get_depth_image_handle$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_INT$LAYOUT.withName("code"),
@@ -36,14 +36,14 @@ class constants$7 {
     );
     static final MethodHandle heif_image_handle_get_depth_image_handle$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_get_depth_image_handle",
-        constants$7.heif_image_handle_get_depth_image_handle$FUNC, false
+        constants$7.heif_image_handle_get_depth_image_handle$FUNC
     );
     static final FunctionDescriptor heif_depth_representation_info_free$FUNC = FunctionDescriptor.ofVoid(
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle heif_depth_representation_info_free$MH = RuntimeHelper.downcallHandle(
         "heif_depth_representation_info_free",
-        constants$7.heif_depth_representation_info_free$FUNC, false
+        constants$7.heif_depth_representation_info_free$FUNC
     );
     static final FunctionDescriptor heif_image_handle_get_depth_image_representation_info$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -52,14 +52,14 @@ class constants$7 {
     );
     static final MethodHandle heif_image_handle_get_depth_image_representation_info$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_get_depth_image_representation_info",
-        constants$7.heif_image_handle_get_depth_image_representation_info$FUNC, false
+        constants$7.heif_image_handle_get_depth_image_representation_info$FUNC
     );
     static final FunctionDescriptor heif_image_handle_get_number_of_thumbnails$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle heif_image_handle_get_number_of_thumbnails$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_get_number_of_thumbnails",
-        constants$7.heif_image_handle_get_number_of_thumbnails$FUNC, false
+        constants$7.heif_image_handle_get_number_of_thumbnails$FUNC
     );
 }
 
