@@ -5,8 +5,8 @@ package org.libheif.linuxosx;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class heif_depth_representation_info {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -226,13 +226,13 @@ public class heif_depth_representation_info {
         return heif_depth_representation_info.depth_nonlinear_representation_model$VH;
     }
     public static MemoryAddress depth_nonlinear_representation_model$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)heif_depth_representation_info.depth_nonlinear_representation_model$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)heif_depth_representation_info.depth_nonlinear_representation_model$VH.get(seg);
     }
     public static void depth_nonlinear_representation_model$set( MemorySegment seg, MemoryAddress x) {
         heif_depth_representation_info.depth_nonlinear_representation_model$VH.set(seg, x);
     }
     public static MemoryAddress depth_nonlinear_representation_model$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)heif_depth_representation_info.depth_nonlinear_representation_model$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)heif_depth_representation_info.depth_nonlinear_representation_model$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void depth_nonlinear_representation_model$set(MemorySegment seg, long index, MemoryAddress x) {
         heif_depth_representation_info.depth_nonlinear_representation_model$VH.set(seg.asSlice(index*sizeof()), x);
@@ -242,11 +242,7 @@ public class heif_depth_representation_info {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
