@@ -5,34 +5,34 @@ package org.libheif.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$0 {
 
     static final FunctionDescriptor heif_get_version$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT);
     static final MethodHandle heif_get_version$MH = RuntimeHelper.downcallHandle(
         "heif_get_version",
-        constants$0.heif_get_version$FUNC, false
+        constants$0.heif_get_version$FUNC
     );
     static final FunctionDescriptor heif_get_version_number$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT);
     static final MethodHandle heif_get_version_number$MH = RuntimeHelper.downcallHandle(
         "heif_get_version_number",
-        constants$0.heif_get_version_number$FUNC, false
+        constants$0.heif_get_version_number$FUNC
     );
     static final FunctionDescriptor heif_get_version_number_major$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT);
     static final MethodHandle heif_get_version_number_major$MH = RuntimeHelper.downcallHandle(
         "heif_get_version_number_major",
-        constants$0.heif_get_version_number_major$FUNC, false
+        constants$0.heif_get_version_number_major$FUNC
     );
     static final FunctionDescriptor heif_get_version_number_minor$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT);
     static final MethodHandle heif_get_version_number_minor$MH = RuntimeHelper.downcallHandle(
         "heif_get_version_number_minor",
-        constants$0.heif_get_version_number_minor$FUNC, false
+        constants$0.heif_get_version_number_minor$FUNC
     );
     static final FunctionDescriptor heif_get_version_number_maintenance$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT);
     static final MethodHandle heif_get_version_number_maintenance$MH = RuntimeHelper.downcallHandle(
         "heif_get_version_number_maintenance",
-        constants$0.heif_get_version_number_maintenance$FUNC, false
+        constants$0.heif_get_version_number_maintenance$FUNC
     );
     static final FunctionDescriptor heif_check_filetype$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -40,7 +40,7 @@ class constants$0 {
     );
     static final MethodHandle heif_check_filetype$MH = RuntimeHelper.downcallHandle(
         "heif_check_filetype",
-        constants$0.heif_check_filetype$FUNC, false
+        constants$0.heif_check_filetype$FUNC
     );
 }
 
