@@ -5,8 +5,8 @@ package org.libheif.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$1 {
 
     static final FunctionDescriptor heif_main_brand$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
@@ -15,7 +15,7 @@ class constants$1 {
     );
     static final MethodHandle heif_main_brand$MH = RuntimeHelper.downcallHandle(
         "heif_main_brand",
-        constants$1.heif_main_brand$FUNC, false
+        constants$1.heif_main_brand$FUNC
     );
     static final FunctionDescriptor heif_read_main_brand$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -23,14 +23,14 @@ class constants$1 {
     );
     static final MethodHandle heif_read_main_brand$MH = RuntimeHelper.downcallHandle(
         "heif_read_main_brand",
-        constants$1.heif_read_main_brand$FUNC, false
+        constants$1.heif_read_main_brand$FUNC
     );
     static final FunctionDescriptor heif_fourcc_to_brand$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle heif_fourcc_to_brand$MH = RuntimeHelper.downcallHandle(
         "heif_fourcc_to_brand",
-        constants$1.heif_fourcc_to_brand$FUNC, false
+        constants$1.heif_fourcc_to_brand$FUNC
     );
     static final FunctionDescriptor heif_brand_to_fourcc$FUNC = FunctionDescriptor.ofVoid(
         Constants$root.C_LONG$LAYOUT,
@@ -38,7 +38,7 @@ class constants$1 {
     );
     static final MethodHandle heif_brand_to_fourcc$MH = RuntimeHelper.downcallHandle(
         "heif_brand_to_fourcc",
-        constants$1.heif_brand_to_fourcc$FUNC, false
+        constants$1.heif_brand_to_fourcc$FUNC
     );
     static final FunctionDescriptor heif_has_compatible_brand$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -47,7 +47,7 @@ class constants$1 {
     );
     static final MethodHandle heif_has_compatible_brand$MH = RuntimeHelper.downcallHandle(
         "heif_has_compatible_brand",
-        constants$1.heif_has_compatible_brand$FUNC, false
+        constants$1.heif_has_compatible_brand$FUNC
     );
     static final FunctionDescriptor heif_list_compatible_brands$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -61,7 +61,7 @@ class constants$1 {
     );
     static final MethodHandle heif_list_compatible_brands$MH = RuntimeHelper.downcallHandle(
         "heif_list_compatible_brands",
-        constants$1.heif_list_compatible_brands$FUNC, false
+        constants$1.heif_list_compatible_brands$FUNC
     );
 }
 
