@@ -5,8 +5,8 @@ package org.libheif.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$16 {
 
     static final FunctionDescriptor heif_encoder_descriptor_supports_lossy_compression$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
@@ -14,14 +14,14 @@ class constants$16 {
     );
     static final MethodHandle heif_encoder_descriptor_supports_lossy_compression$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_descriptor_supports_lossy_compression",
-        constants$16.heif_encoder_descriptor_supports_lossy_compression$FUNC, false
+        constants$16.heif_encoder_descriptor_supports_lossy_compression$FUNC
     );
     static final FunctionDescriptor heif_encoder_descriptor_supports_lossless_compression$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle heif_encoder_descriptor_supports_lossless_compression$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_descriptor_supports_lossless_compression",
-        constants$16.heif_encoder_descriptor_supports_lossless_compression$FUNC, false
+        constants$16.heif_encoder_descriptor_supports_lossless_compression$FUNC
     );
     static final FunctionDescriptor heif_context_get_encoder$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -34,21 +34,21 @@ class constants$16 {
     );
     static final MethodHandle heif_context_get_encoder$MH = RuntimeHelper.downcallHandle(
         "heif_context_get_encoder",
-        constants$16.heif_context_get_encoder$FUNC, false
+        constants$16.heif_context_get_encoder$FUNC
     );
     static final FunctionDescriptor heif_have_decoder_for_format$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
         Constants$root.C_LONG$LAYOUT
     );
     static final MethodHandle heif_have_decoder_for_format$MH = RuntimeHelper.downcallHandle(
         "heif_have_decoder_for_format",
-        constants$16.heif_have_decoder_for_format$FUNC, false
+        constants$16.heif_have_decoder_for_format$FUNC
     );
     static final FunctionDescriptor heif_have_encoder_for_format$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
         Constants$root.C_LONG$LAYOUT
     );
     static final MethodHandle heif_have_encoder_for_format$MH = RuntimeHelper.downcallHandle(
         "heif_have_encoder_for_format",
-        constants$16.heif_have_encoder_for_format$FUNC, false
+        constants$16.heif_have_encoder_for_format$FUNC
     );
     static final FunctionDescriptor heif_context_get_encoder_for_format$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -61,7 +61,7 @@ class constants$16 {
     );
     static final MethodHandle heif_context_get_encoder_for_format$MH = RuntimeHelper.downcallHandle(
         "heif_context_get_encoder_for_format",
-        constants$16.heif_context_get_encoder_for_format$FUNC, false
+        constants$16.heif_context_get_encoder_for_format$FUNC
     );
 }
 
