@@ -5,8 +5,8 @@ package org.libheif.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$17 {
 
     static final FunctionDescriptor heif_encoder_release$FUNC = FunctionDescriptor.ofVoid(
@@ -14,14 +14,14 @@ class constants$17 {
     );
     static final MethodHandle heif_encoder_release$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_release",
-        constants$17.heif_encoder_release$FUNC, false
+        constants$17.heif_encoder_release$FUNC
     );
     static final FunctionDescriptor heif_encoder_get_name$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle heif_encoder_get_name$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_get_name",
-        constants$17.heif_encoder_get_name$FUNC, false
+        constants$17.heif_encoder_get_name$FUNC
     );
     static final FunctionDescriptor heif_encoder_set_lossy_quality$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -33,7 +33,7 @@ class constants$17 {
     );
     static final MethodHandle heif_encoder_set_lossy_quality$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_set_lossy_quality",
-        constants$17.heif_encoder_set_lossy_quality$FUNC, false
+        constants$17.heif_encoder_set_lossy_quality$FUNC
     );
     static final FunctionDescriptor heif_encoder_set_lossless$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -45,7 +45,7 @@ class constants$17 {
     );
     static final MethodHandle heif_encoder_set_lossless$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_set_lossless",
-        constants$17.heif_encoder_set_lossless$FUNC, false
+        constants$17.heif_encoder_set_lossless$FUNC
     );
     static final FunctionDescriptor heif_encoder_set_logging_level$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -57,14 +57,14 @@ class constants$17 {
     );
     static final MethodHandle heif_encoder_set_logging_level$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_set_logging_level",
-        constants$17.heif_encoder_set_logging_level$FUNC, false
+        constants$17.heif_encoder_set_logging_level$FUNC
     );
     static final FunctionDescriptor heif_encoder_list_parameters$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle heif_encoder_list_parameters$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_list_parameters",
-        constants$17.heif_encoder_list_parameters$FUNC, false
+        constants$17.heif_encoder_list_parameters$FUNC
     );
 }
 
