@@ -5,8 +5,8 @@ package org.libheif.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$18 {
 
     static final FunctionDescriptor heif_encoder_parameter_get_name$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
@@ -14,14 +14,14 @@ class constants$18 {
     );
     static final MethodHandle heif_encoder_parameter_get_name$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_parameter_get_name",
-        constants$18.heif_encoder_parameter_get_name$FUNC, false
+        constants$18.heif_encoder_parameter_get_name$FUNC
     );
     static final FunctionDescriptor heif_encoder_parameter_get_type$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle heif_encoder_parameter_get_type$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_parameter_get_type",
-        constants$18.heif_encoder_parameter_get_type$FUNC, false
+        constants$18.heif_encoder_parameter_get_type$FUNC
     );
     static final FunctionDescriptor heif_encoder_parameter_get_valid_integer_range$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -35,7 +35,7 @@ class constants$18 {
     );
     static final MethodHandle heif_encoder_parameter_get_valid_integer_range$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_parameter_get_valid_integer_range",
-        constants$18.heif_encoder_parameter_get_valid_integer_range$FUNC, false
+        constants$18.heif_encoder_parameter_get_valid_integer_range$FUNC
     );
     static final FunctionDescriptor heif_encoder_parameter_get_valid_integer_values$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -52,7 +52,7 @@ class constants$18 {
     );
     static final MethodHandle heif_encoder_parameter_get_valid_integer_values$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_parameter_get_valid_integer_values",
-        constants$18.heif_encoder_parameter_get_valid_integer_values$FUNC, false
+        constants$18.heif_encoder_parameter_get_valid_integer_values$FUNC
     );
     static final FunctionDescriptor heif_encoder_parameter_get_valid_string_values$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -64,7 +64,7 @@ class constants$18 {
     );
     static final MethodHandle heif_encoder_parameter_get_valid_string_values$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_parameter_get_valid_string_values",
-        constants$18.heif_encoder_parameter_get_valid_string_values$FUNC, false
+        constants$18.heif_encoder_parameter_get_valid_string_values$FUNC
     );
     static final FunctionDescriptor heif_encoder_set_parameter_integer$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -77,7 +77,7 @@ class constants$18 {
     );
     static final MethodHandle heif_encoder_set_parameter_integer$MH = RuntimeHelper.downcallHandle(
         "heif_encoder_set_parameter_integer",
-        constants$18.heif_encoder_set_parameter_integer$FUNC, false
+        constants$18.heif_encoder_set_parameter_integer$FUNC
     );
 }
 
