@@ -5,8 +5,8 @@ package org.libheif.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$21 {
 
     static final FunctionDescriptor heif_encoding_options_free$FUNC = FunctionDescriptor.ofVoid(
@@ -14,7 +14,7 @@ class constants$21 {
     );
     static final MethodHandle heif_encoding_options_free$MH = RuntimeHelper.downcallHandle(
         "heif_encoding_options_free",
-        constants$21.heif_encoding_options_free$FUNC, false
+        constants$21.heif_encoding_options_free$FUNC
     );
     static final FunctionDescriptor heif_context_encode_image$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -29,7 +29,7 @@ class constants$21 {
     );
     static final MethodHandle heif_context_encode_image$MH = RuntimeHelper.downcallHandle(
         "heif_context_encode_image",
-        constants$21.heif_context_encode_image$FUNC, false
+        constants$21.heif_context_encode_image$FUNC
     );
     static final FunctionDescriptor heif_context_set_primary_image$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -41,7 +41,7 @@ class constants$21 {
     );
     static final MethodHandle heif_context_set_primary_image$MH = RuntimeHelper.downcallHandle(
         "heif_context_set_primary_image",
-        constants$21.heif_context_set_primary_image$FUNC, false
+        constants$21.heif_context_set_primary_image$FUNC
     );
     static final FunctionDescriptor heif_context_encode_thumbnail$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -58,7 +58,7 @@ class constants$21 {
     );
     static final MethodHandle heif_context_encode_thumbnail$MH = RuntimeHelper.downcallHandle(
         "heif_context_encode_thumbnail",
-        constants$21.heif_context_encode_thumbnail$FUNC, false
+        constants$21.heif_context_encode_thumbnail$FUNC
     );
     static final FunctionDescriptor heif_context_assign_thumbnail$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -71,7 +71,7 @@ class constants$21 {
     );
     static final MethodHandle heif_context_assign_thumbnail$MH = RuntimeHelper.downcallHandle(
         "heif_context_assign_thumbnail",
-        constants$21.heif_context_assign_thumbnail$FUNC, false
+        constants$21.heif_context_assign_thumbnail$FUNC
     );
     static final FunctionDescriptor heif_context_add_exif_metadata$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -85,7 +85,7 @@ class constants$21 {
     );
     static final MethodHandle heif_context_add_exif_metadata$MH = RuntimeHelper.downcallHandle(
         "heif_context_add_exif_metadata",
-        constants$21.heif_context_add_exif_metadata$FUNC, false
+        constants$21.heif_context_add_exif_metadata$FUNC
     );
 }
 
