@@ -5,8 +5,8 @@ package org.libheif.win;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$8 {
 
     static final FunctionDescriptor heif_image_handle_get_thumbnail$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
@@ -20,7 +20,7 @@ class constants$8 {
     );
     static final MethodHandle heif_image_handle_get_thumbnail$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_get_thumbnail",
-        constants$8.heif_image_handle_get_thumbnail$FUNC, false
+        constants$8.heif_image_handle_get_thumbnail$FUNC
     );
     static final FunctionDescriptor heif_image_handle_get_number_of_auxiliary_images$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -28,7 +28,7 @@ class constants$8 {
     );
     static final MethodHandle heif_image_handle_get_number_of_auxiliary_images$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_get_number_of_auxiliary_images",
-        constants$8.heif_image_handle_get_number_of_auxiliary_images$FUNC, false
+        constants$8.heif_image_handle_get_number_of_auxiliary_images$FUNC
     );
     static final FunctionDescriptor heif_image_handle_get_list_of_auxiliary_image_IDs$FUNC = FunctionDescriptor.of(Constants$root.C_LONG$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -38,7 +38,7 @@ class constants$8 {
     );
     static final MethodHandle heif_image_handle_get_list_of_auxiliary_image_IDs$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_get_list_of_auxiliary_image_IDs",
-        constants$8.heif_image_handle_get_list_of_auxiliary_image_IDs$FUNC, false
+        constants$8.heif_image_handle_get_list_of_auxiliary_image_IDs$FUNC
     );
     static final FunctionDescriptor heif_image_handle_get_auxiliary_type$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -50,7 +50,7 @@ class constants$8 {
     );
     static final MethodHandle heif_image_handle_get_auxiliary_type$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_get_auxiliary_type",
-        constants$8.heif_image_handle_get_auxiliary_type$FUNC, false
+        constants$8.heif_image_handle_get_auxiliary_type$FUNC
     );
     static final FunctionDescriptor heif_image_handle_free_auxiliary_types$FUNC = FunctionDescriptor.ofVoid(
         Constants$root.C_POINTER$LAYOUT,
@@ -58,7 +58,7 @@ class constants$8 {
     );
     static final MethodHandle heif_image_handle_free_auxiliary_types$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_free_auxiliary_types",
-        constants$8.heif_image_handle_free_auxiliary_types$FUNC, false
+        constants$8.heif_image_handle_free_auxiliary_types$FUNC
     );
     static final FunctionDescriptor heif_image_handle_get_auxiliary_image_handle$FUNC = FunctionDescriptor.of(MemoryLayout.structLayout(
         Constants$root.C_LONG$LAYOUT.withName("code"),
@@ -71,7 +71,7 @@ class constants$8 {
     );
     static final MethodHandle heif_image_handle_get_auxiliary_image_handle$MH = RuntimeHelper.downcallHandle(
         "heif_image_handle_get_auxiliary_image_handle",
-        constants$8.heif_image_handle_get_auxiliary_image_handle$FUNC, false
+        constants$8.heif_image_handle_get_auxiliary_image_handle$FUNC
     );
 }
 
